# genro-db

./: README.md  pyproject.toml
examples/bookstore/: bookstore_manager.py  demo_bookstore.py
examples/bookstore_code/: bookstore_manager.py
examples/library_code/: library_manager.py
genro_db/: __init__.py  column.py  compiler.py  database.py  table.py  trigger_stack.py
genro_db/adapters/: __init__.py  base.py  postgres.py  sqlite.py
genro_db/cli/: __init__.py  config.py  db_commands.py
genro_sql/: column.py  database.py  table.py
genro_sql/cli/: __init__.py  db_commands.py
gtext_src/: architecture.md.gtext  overview.md.gtext  subproject_hdr.md
tests/: test_bookstore.py  test_environment.py  test_integration.py
