[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "genro-db"
version = "0.1.0"
description = "Database abstraction layer for Genro framework with ORM, migrations, and triggers"
authors = [{name = "Genropy Team"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["genro", "database", "orm", "migrations", "sql"]

dependencies = [
    "genro-core>=0.1.0",
    "genro-app>=0.1.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
postgresql = [
    "psycopg2-binary>=2.9.0",
]

[project.urls]
Homepage = "https://github.com/genropy/genro-db"
Repository = "https://github.com/genropy/genro-db"
Issues = "https://github.com/genropy/genro-db/issues"

[project.entry-points."genro.cli"]
db = "genro_db.cli:DbCommands"

[tool.setuptools.packages.find]
where = ["."]
include = ["genro_db*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=genro_db --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I", "N"]
